--- a/fasum/android/app/build.gradle
+++ b/fasum/android/app/build.gradle
@@ -14,6 +14,8 @@ android {
     ndkVersion = flutter.ndkVersion
 
     compileOptions {
+        // isCoreLibraryDesugaringEnabled = true
+        isCoreLibraryDesugaringEnabled = true
         sourceCompatibility = JavaVersion.VERSION_1_8
         targetCompatibility = JavaVersion.VERSION_1_8
     }
@@ -41,6 +43,11 @@ android {
             signingConfig = signingConfigs.debug
         }
     }
+}
+
+// tambahkan depedencies desugaring
+depedencies {
+    coreLibaryDesugaring("com.android.tools:desugar_jdk_libs:2.1.4")
 }
 
 flutter {
